# ja2-stracciatella

./: .cproject  .directory  .editorconfig  .gitignore  .mailmap  .project  .travis.yml  CMakeLists.txt  COMPILATION.md  COMPILATION.txt  CONTRIBUTING.md  Changelog  FIXME  INSTALL.txt  ISSUE_TEMPLATE.md  Makefile  Makefile.config  README.md  Release-checklist.md  TODO  appveyor.yml  changes.md  config.template  configure  contributors.txt  ja2-stracciatella.desktop  ja2-stracciatella.kdev4  ja2.6  ja2_manpage  ja2config.h  replace_code.sh
_build/lib-MicroIni/: .gitignore  CMakeLists.txt  README.txt  license.txt  readme.md
_build/lib-MicroIni/doc/: CMakeLists.txt  doxyfile.in  mainpage.dox
_build/lib-MicroIni/example/: CMakeLists.txt  example.cpp  input.ini
dependencies/lib-boost/: CMakeLists.txt
dependencies/lib-fltk/: CMakeLists.txt
dependencies/lib-fltk/builder/: CMakeLists.txt.in
dependencies/lib-gtest/: CMakeLists.txt
dependencies/lib-gtest/getter/: CMakeLists.txt.in
dependencies/lib-lua/: CMakeLists.txt  LICENSE.txt
dependencies/lib-lua/getter/: CMakeLists.txt.in
dependencies/lib-magic_enum/: CMakeLists.txt
dependencies/lib-magic_enum/getter/: CMakeLists.txt.in
dependencies/lib-mingw-std-threads/: CMakeLists.txt
dependencies/lib-mingw-std-threads/getter/: CMakeLists.txt.in
dependencies/lib-miniaudio/: CMakeLists.txt
dependencies/lib-miniaudio/getter/: CMakeLists.txt.in
dependencies/lib-sdl2/: CMakeLists.txt
dependencies/lib-sdl2/builder/: Bug5100.patch  CMakeLists.txt.in  ndk25.patch
dependencies/lib-smacker/: CMakeLists.txt  LICENSE.txt
dependencies/lib-smacker/libsmacker/: Makefile  driver.c  smacker.c  smacker.h  smk_hufftree.c
dependencies/lib-sol2/: CMakeLists.txt
dependencies/lib-sol2/getter/: CMakeLists.txt.in  gcc-15.patch
dependencies/lib-stracciatella/: CMakeLists.txt  update-stamp.cmake.in
dependencies/lib-string_theory/: CMakeLists.txt
dependencies/lib-string_theory/builder/: CMakeLists.txt.in  signless-zero.patch
dependencies/lib-string_theory/patch/: CMakeLists.txt
rust/: .gitignore  CMakeLists.txt  Cargo.toml  ExternalProject.cmake  build.rs  cbindgen.toml
rust/src/: bin_resource_pack.rs  guess.rs  json.rs  librarydb.rs  logger.rs  res.rs  slf.rs  slog.rs  stracciatella.rs  unicode.rs
rust/src/c/: config.rs  librarydb.rs  logger.rs  misc.rs  mod.rs
rust/src/config/: cli.rs  engine_options.rs  ja2_json.rs  mod.rs  resolution.rs  scaling_quality.rs  stracciatella_home.rs  vanilla_version.rs
rust/src/file_formats/: mod.rs  slf.rs
rust/stracciatella/: Cargo.toml  build.rs  cbindgen.toml
rust/stracciatella_bin/: Cargo.toml
rust/stracciatella_c_api/: Cargo.toml  build.rs  cbindgen.toml
src/: AmmoTypeModel.cc  AmmoTypeModel.d  AmmoTypeModel.h  CMakeLists.txt  CalibreModel.cc  CalibreModel.d  CalibreModel.h  ContentManager.h  DealerInventory.cc  DealerInventory.d  DealerInventory.h  DefaultContentManager.cc  DefaultContentManager.d  DefaultContentManager.h  DefaultContentManagerUT.cc  DefaultContentManagerUT.d  DefaultContentManager_unittests.cc  DefaultContentManager_unittests.d  Doxyfile  GameInstance.h  IGameDataLoader.h  ItemModel.cc  ItemModel.d  ItemModel.h  JsonObject.h  JsonUtility.cc  JsonUtility.d  JsonUtility.h  JsonUtility_unittests.d  MagazineModel.cc  MagazineModel.d  MagazineModel.h  MercProfile.cc  MercProfile.d  MercProfile.h  ModPackContentManager.cc  ModPackContentManager.d  ModPackContentManager.h  RustInterface.h  Soldier.cc  (+12 more)
src/content/: CMakeLists.txt  ContentMercs.cc  ContentMercs.d  ContentMercs.h  ContentMusic.h  Dialogs.cc  Dialogs.d  Dialogs.h  Mercs.cc  npcs.d  npcs.h
src/externalized/: AmmoTypeModel.cc  AmmoTypeModel.h  ArmourModel.cc  ArmourModel.h  CMakeLists.txt  CalibreModel.cc  CalibreModel.h  ContentManager.h  DealerInventory.cc  DealerInventory.h  DealerModel.cc  DealerModel.h  DefaultContentManager.cc  DefaultContentManager.h  DefaultContentManagerUT.cc  DefaultContentManagerUT.h  DefaultContentManager_unittests.cc  Exceptions.h  ExplosionAnimationModel.cc  ExplosionAnimationModel.h  ExplosiveCalibreModel.cc  ExplosiveCalibreModel.h  ExplosiveModel.cc  ExplosiveModel.h  GraphicModel.cc  GraphicModel.h  IGameDataLoader.h  InventoryGraphicsModel.cc  InventoryGraphicsModel.h  ItemModel.cc  ItemModel.h  ItemRange.h  ItemSystem.h  JsonObject.h  JsonUtility.cc  JsonUtility.h  JsonUtility_unittests.cc  LoadingScreenModel.cc  LoadingScreenModel.h  MagazineModel.cc  (+22 more)
src/game/: AniViewScreen.cc  AniViewScreen.h  CMakeLists.txt  Cheats.cc  Cheats.h  Credits.cc  Credits.h  Directories.h  Fade_Screen.cc  Fade_Screen.h  GameInitOptionsScreen.cc  GameInitOptionsScreen.h  GameLoop.cc  GameLoop.h  GameMode.cc  GameMode.h  GameRes.cc  GameRes.h  GameScreen.cc  GameScreen.h  GameSettings.cc  GameSettings.h  GameState.cc  GameState.h  GameVersion.cc  GameVersion.h  HelpScreen.cc  HelpScreen.h  HelpScreenText.h  Init.cc  Init.h  Intro.cc  Intro.h  JA2Types.h  JA2_Splash.cc  JA2_Splash.h  JAScreens.cc  JAScreens.h  LoadSaveEMail.cc  LoadSaveEMail.h  (+30 more)
src/internals/: CMakeLists.txt  enums.cc  enums.d  enums.h
src/launcher/: CMakeLists.txt  Launcher.cc  Launcher.h  StracciatellaLauncher.cc  StracciatellaLauncher.fl  StracciatellaLauncher.h  logo32.png.h  main.cc
src/policy/: CMakeLists.txt  DefaultGamePolicy.cc  DefaultGamePolicy.d  DefaultGamePolicy.h  DefaultIMPPolicy.cc  DefaultIMPPolicy.d  GamePolicy.h  IMPPolicy.h
src/sgp/: Buffer.h  Button_Sound_Control.cc  Button_System.cc  Button_System.h  CMakeLists.txt  Concepts.h  Container.cc  Container.h  Cursor_Control.cc  Cursor_Control.h  Debug.h  DirFs.cc  DirFs.h  EncodingCorrectors.cc  EncodingCorrectors.h  English.h  FPS.cc  FPS.h  FileMan.cc  FileMan.h  FileMan_unittest.cc  Font.cc  Font.h  FontCompat.cc  FontCompat.h  HImage.cc  HImage.h  IEncodingCorrector.h  Icon.h  ImgFmt.h  ImpTGA.cc  ImpTGA.h  Input.cc  Input.h  LibraryDataBase.cc  LibraryDataBase.h  Line.cc  Line.h  LoadSaveData.cc  LoadSaveData.h  (+62 more)
src/slog/: CMakeLists.txt  README.md  slog.c  slog.cc  slog.h
src/ui/: CMakeLists.txt  Easings.h  Easings_unittests.cc
(+2171 files in other folders)
